# BenchmarkTool

./: .gitignore  .gitmodules  CMakeLists.txt  TODOs.txt
Backend/: CMakeLists.txt
Backend/core/: AbstractImporter.h  CMakeLists.txt  Database.cpp  EntityValidators.cpp  EntityValidators.h  FileFormatDetector.cpp  FileFormatDetector.h  ISystemInfo.h  LinuxSystemInfo.cpp  LinuxSystemInfo.h  Normalizer.cpp  Normalizer.h  ThreeDMarkImporter.cpp  ThreeDMarkImporter.h  Utils.cpp  Utils.h  ZipArchive.cpp  ZipArchive.h
Backend/libs/httplib/: CMakeLists.txt
Backend/libs/json/: CMakeLists.txt
Backend/schema/: schema.sql
Backend/src/: Database.h  Server.cpp  Server.h  SystemInfoRequest.cpp  SystemInfoRequest.h  main.cpp
Backend/tests/: CMakeLists.txt
Backend/tests/src/: NormalizerTests.cpp  SystemInfoTests.cpp  TestHelpers.cpp  TestHelpers.h  ValidateBencharkRunTests.cpp  ValidateMachineTests.cpp  ValidateSoftwareEnvironmentTests.cpp  ValidationTests.cpp
Backend/ui/: app.js  index.html  style.css
Frontend/: CMakeLists.txt  index.html
scripts/: createHwConfig  createMachine  createRunRaw  createSoftwareConfig  createSoftwareEnv  createTest  createTestConfig
sketches/: Domain Model.txt  dababase schema.txt  mainLayout.txt
src/Backend/: CMakeLists.txt  Server.cpp
src/Frontend/: CMakeLists.txt  CefApp.cpp
web/: index.html
